youtube-sidebar-clone finished | 02

--- a/Youtube-Sidebar-Clone/index.html
+++ b/Youtube-Sidebar-Clone/index.html
@@ -44,55 +44,55 @@
                 <div class="aside-nav js-aside-nav">
                     <ul>
                         <li>
-                            <a href="#" class="nav-link active">
+                            <a href="#" id="a1" class="nav-link">
                                 <div class="nav-icon material-icons">dashboard</div>
                                 <span class="text">Dashboard</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">
+                            <a href="#" id="a2" class="nav-link active">
                                 <div class="nav-icon material-icons">video_library</div>
                                 <span class="text">Content</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">
+                            <a href="#" id="a3" class="nav-link">
                                 <div class="nav-icon material-icons">playlist_play</div>
                                 <span class="text">Playlists</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">
+                            <a href="#" id="a4" class="nav-link">
                                 <div class="nav-icon material-icons">insert_chart</div>
                                 <span class="text">Analytics</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">
+                            <a href="#" id="a5" class="nav-link">
                                 <div class="nav-icon material-icons">comment</div>
                                 <span class="text">Comments</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">
+                            <a href="#" id="a6" class="nav-link">
                                 <div class="nav-icon material-icons">subtitles</div>
                                 <span class="text">Subtitles</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">
+                            <a href="#" id="a7" class="nav-link">
                                 <div class="nav-icon material-icons">copyright</div>
                                 <span class="text">Copyright</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">
+                            <a href="#" id="a8" class="nav-link">
                                 <div class="nav-icon material-icons">attach_money</div>
                                 <span class="text">Monetization</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">
+                            <a href="#" id="a9" class="nav-link">
                                 <div class="nav-icon material-icons">library_music</div>
                                 <span class="text">Audio library</span>
                             </a>
@@ -102,13 +102,13 @@
                 <footer class="bottom-nav">
                     <ul>
                         <li>
-                            <a href="#" class="nav-link">
+                            <a href="#" id="a10" class="nav-link">
                                 <div class="nav-icon material-icons">dashboard</div>
                                 <span class="text">Dashboard</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link">
+                            <a href="#" id="a11" class="nav-link">
                                 <div class="nav-icon material-icons">video_library</div>
                                 <span class="text">Content</span>
                             </a>
